ncc/testsuite/positive/Issue-git-0500.n
module P
{
  Main(args : array[string]) : void
  {
    IgnoreParams();
      
    def foo(a : int, b : string, c : char) : void
    {
      IgnoreParams();
        
      def bar(a : int, b : string, c : char) : int
      {
        IgnoreParams();
        a
      }
        
      _ = bar(42, "aa", 'c');
    }
      
    foo(42, "aa", 'c');
    foo(42, "aa", 'c');
  }
}

/*
BEGIN-OUTPUT
END-OUTPUT
*/
