ncc/testsuite/negative/params.n
module M {
  foo (_ : string, params _ : array [int]) : void {} // OK
  foo (params _ : array [array [int]]) : void {} // OK
  foo (params _ : array [int], _ : string) : void {} // E: `params' is allowed only on last parameter
  bar (_ : int, params _ : int) : void {} // E: only single-dimensional arrays are allowed in `params' parameters
  baz (_ : int, params _ : array [2, int]) : void {} // E: only single-dimensional arrays are allowed in `params' parameters

  Main () : void { } // OK
}
